--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 .profile-content {
     position: relative;
     z-index: 1;
-    color: #00ff41;
+    color: #ffffff;
     font-family: 'IBM Plex Mono', monospace;
 }
 
@@ -69,12 +69,13 @@
     height: 150px;
     border-radius: 50%;
     margin: 0 auto 2rem;
-    border: 2px solid #00ff41;
+    border: 2px solid #ffffff;
     object-fit: cover;
     display: block;
 }
 
 h1.name {
+color: white;
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 1.5rem;
@@ -85,13 +86,13 @@ h1.name {
 .bio-section {
     margin: 2rem 0;
     padding: 1.5rem;
-    border-left: 2px solid rgba(0, 255, 65, 0.3);
+    border-left: 2px solid rgba(255, 255, 255, 0.3);
 }
 
 .bio-section h3 {
     font-size: 1.2rem;
     margin-bottom: 1rem;
-    color: #00ff41;
+    color: #ffffff;
     text-transform: uppercase;
 }
 
@@ -103,13 +104,13 @@ h1.name {
 }
 
 .keyword {
-    color: #00ff41;
+    color: #ffffff;
     font-weight: 500;
 }
 
 .divider {
     height: 1px;
-    background: rgba(0, 255, 65, 0.1);
+    background: rgba(255, 255, 255, 0.1);
     margin: 2rem 0;
 }
 
@@ -121,7 +122,7 @@ h1.name {
 }
 
 .social-links a {
-    color: #00ff41;
+    color: #ffffff;
     font-size: 1.5rem;
     transition: opacity 0.3s ease;
 }
