--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@ color: white;
 
 .bio-section p {
     line-height: 1.6;
-    color: #c8c8c8;
+    color: #ffffff;
     margin-bottom: 1.5rem;
     font-size: 1rem;
 }
