--- a/journal.html
+++ b/journal.html
@@ -33,7 +33,7 @@
     /* existing styles below */
     font-family: 'Barrio', cursive;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 1.2rem;
     margin-bottom: 3rem;
     color: white;
     text-transform: uppercase;
@@ -1278,7 +1278,7 @@ const newStyles = `
 
     <!-- Unified Journal Section -->
     <section class="section">
-        <h1 class="journal-heading">JOURNAL</h1>
+        <h1 class="journal-heading">FOR THOSE WHO MOVE BETWEEN WORLDS</h1>
         <div class="container">
             <div class="grid grid-3">
                 <!-- Faultlines Articles -->
