--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <style>
         /* Base Cyberpunk Styles */
         :root {
-            --neon-green: #0f0;
+            --neon-green: #ffffff;
             --matrix-green: #00ff41;
             --glitch-pink: #ff00c1;
             --terminal-bg: #000;
@@ -1259,7 +1259,7 @@ const newStyles = `
             <h1 class="name">Siphosenkosi Mlotshwa</h1>
             
             <div class="bio-section">
-                <h3>Digital Architect // Culture Hacker</h3>
+                <h3></h3>
                 
                 <p>
                 I write in symbols, systems, and silence.<br>
