--- a/about.html
+++ b/about.html
@@ -1258,7 +1258,7 @@ const newStyles = `
         <div class="profile-content">
            <!-- <img src="images/AVI.jpg" alt="Siphosenkosi Mlotshwa" class="profile-img"> -->
             
-            <h1 class="name">Siphosenkosi Mlotshwa</h1>
+            <h1 class="name"></h1>
             
             <div class="bio-section">
                 <h3></h3>
