--- a/work.html
+++ b/work.html
@@ -269,13 +269,13 @@
     right: -5px;
     bottom: -5px;
     border-radius: 8px;
-    border: 1px solid #00ff9d;
+    border: 1px solid white;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
 
 .mobile-menu-btn:hover {
-    border-color: #00ff9d;
+    border-color: white;
     box-shadow: 0 0 15px rgba(0, 255, 157, 0.3);
 }
 
@@ -309,7 +309,7 @@
 
 .menu-x-line {
     position: absolute;
-    background: #00ff9d;
+    background: white;
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -329,7 +329,7 @@
 
 .mobile-menu-btn.active {
     background: rgba(0, 0, 0, 0.5);
-    border-color: #00ff9d;
+    border-color: white;
     box-shadow: 0 0 25px rgba(0, 255, 157, 0.4);
 }
 
