--- a/about.html
+++ b/about.html
@@ -568,7 +568,7 @@ font-family: 'Barrio', cursive;
     left: 0;
     width: 0;
     height: 2px;
-    background: #00ff9d;
+    background: white;
     transition: width 0.3s ease;
 }
 
@@ -602,13 +602,13 @@ font-family: 'Barrio', cursive;
     right: -5px;
     bottom: -5px;
     border-radius: 8px;
-    border: 1px solid #00ff9d;
+    border: 1px solid white;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
 
 .mobile-menu-btn:hover {
-    border-color: #00ff9d;
+    border-color: white;
     box-shadow: 0 0 15px rgba(0, 255, 157, 0.3);
 }
 
@@ -642,8 +642,8 @@ font-family: 'Barrio', cursive;
 
 .menu-x-line {
     position: absolute;
-    background: #00ff9d;
-    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    background: white;
+    transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-x-line:nth-child(1) {
@@ -662,7 +662,7 @@ font-family: 'Barrio', cursive;
 
 .mobile-menu-btn.active {
     background: rgba(0, 0, 0, 0.5);
-    border-color: #00ff9d;
+    border-color: white;
     box-shadow: 0 0 25px rgba(0, 255, 157, 0.4);
 }
 
@@ -693,7 +693,7 @@ font-family: 'Barrio', cursive;
         align-items: flex-start;
         padding: 6rem 2rem;
         transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-        border-left: 1px solid #00ff9d;
+        border-left: 1px solid white;
         box-shadow: -10px 0 30px rgba(0, 0, 0, 0.5);
         z-index: 998;
     }
@@ -777,7 +777,7 @@ font-family: 'Barrio', cursive;
         }
 
         .social-links a:hover {
-            color: #00ff9d;
+            color: grey;
         }
 
         /* Styles for resume and certification modals */
