--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@ font-family: 'Barrio', cursive;
 
         body {
             /*font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;*/
-            font-family: 'IBM Plex Mono', monospace;
+            font-family: 'Barrio', cursive;
             line-height: 1.0;
             color: white;
             background-color: black;
