--- a/about.html
+++ b/about.html
@@ -99,7 +99,9 @@ font-family: 'Barrio', cursive;
 }
 
 .bio-section p {
-    line-height: 1.6;
+
+ font-family: 'Barrio', cursive;
+   line-height: 1.6;
     color: #ffffff;
     margin-bottom: 1.5rem;
     font-size: 1rem;
