--- a/work.html
+++ b/work.html
@@ -235,7 +235,7 @@
     left: 0;
     width: 0;
     height: 2px;
-    background: #00ff9d;
+    background: white;
     transition: width 0.3s ease;
 }
 
@@ -495,7 +495,7 @@
         }
 
         .btn-primary {
-            background: #00ff9d;
+            background: white;
             color: black;
         }
 
@@ -545,7 +545,7 @@
 .tech-badge {
     background: black;
     color: #00ff9d;
-    border: 1px solid #00ff9d;
+    border: 1px solid white;
     padding: 0.25rem 0.5rem;
     border-radius: 4px;
     font-size: 0.8rem;
