--- a/work.html
+++ b/work.html
@@ -1596,7 +1596,7 @@ document.addEventListener('DOMContentLoaded', function() {
         width: 50px;
         height: 50px;
         border-radius: 5px;
-        box-shadow: 0 0 15px #00ff9d;
+        box-shadow: 0 0 15px white;
         animation: electric 0.3s linear;
         pointer-events: none;
     `;
