--- a/work.html
+++ b/work.html
@@ -360,7 +360,7 @@
         align-items: flex-start;
         padding: 6rem 2rem;
         transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-        border-left: 1px solid #00ff9d;
+        border-left: 1px solid white;
         box-shadow: -10px 0 30px rgba(0, 0, 0, 0.5);
         z-index: 998;
     }
