--- a/work.html
+++ b/work.html
@@ -34,6 +34,15 @@
 
     <title>THE LAB</title>
     <style>
+
+
+.mobile-menu-btn {
+    border: 1px solid white !important; /* Changed from rgba to solid white */
+}
+
+.mobile-menu-btn:focus {
+    outline: none; /* Remove default focus outline */
+}
         /* Reset and base styles */
         * {
             margin: 0;
