--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
     <!-- Add your existing styles -->
     <style>
 
-        
+        .mobile-menu-btn {
+    border: 1px solid white !important; /* Changed from rgba to solid white */
+}
+
+.mobile-menu-btn:focus {
+    outline: none; /* Remove default focus outline */
+}
         .article-container {
             max-width: 800px;
             margin: 0 auto;
