--- a/journal.html
+++ b/journal.html
@@ -26,6 +26,15 @@
     <!-- Add your existing styles -->
     <style>
 
+
+.mobile-menu-btn {
+    border: 1px solid white !important; /* Changed from rgba to solid white */
+}
+
+.mobile-menu-btn:focus {
+    outline: none; /* Remove default focus outline */
+}
+
         /* New unified journal heading style */
         
             .journal-heading {
