--- a/about.html
+++ b/about.html
@@ -26,6 +26,14 @@
     <title>About - Siphosenkosi Mlotshwa</title>
     <!-- Add your existing styles -->
     <style>
+
+.mobile-menu-btn {
+    border: 1px solid white !important; /* Changed from rgba to solid white */
+}
+
+.mobile-menu-btn:focus {
+    outline: none; /* Remove default focus outline */
+}
         /* Base Cyberpunk Styles */
         :root {
             --neon-green: #ffffff;
