--- a/journal.html
+++ b/journal.html
@@ -268,7 +268,7 @@
     left: 0;
     width: 0;
     height: 2px;
-    background: #00ff9d;
+    background: white;
     transition: width 0.3s ease;
 }
 
