--- a/Drifting-as-Rebellion.html
+++ b/Drifting-as-Rebellion.html
@@ -23,6 +23,13 @@
         })();
     </script>
 
+
+<title>The Situationist Dérive — Drifting as Rebellion (1956)</title>
+<meta name="description" content="">
+
+    <!-- Add your existing styles -->
+    <style>
+
 .mobile-menu-btn {
     border: 1px solid white !important; /* Changed from rgba to solid white */
 }
@@ -31,11 +38,6 @@
     outline: none; /* Remove default focus outline */
 }
 
-<title>The Situationist Dérive — Drifting as Rebellion (1956)</title>
-<meta name="description" content="">
-
-    <!-- Add your existing styles -->
-    <style>
         .article-container {
             max-width: 800px;
             margin: 0 auto;
@@ -320,7 +322,7 @@
         align-items: flex-start;
         padding: 6rem 2rem;
         transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-        border-left: 1px solid #00ff9d;
+        border-left: 1px solid white;
         box-shadow: -10px 0 30px rgba(0, 0, 0, 0.5);
         z-index: 998;
     }
