--- a/a-nuclear-future.html
+++ b/a-nuclear-future.html
@@ -26,6 +26,16 @@
     <title>SYSTEM REBOOT: URANIUM_ACCESS = TRUE</title>
     <!-- Add your existing styles -->
     <style>
+
+.mobile-menu-btn {
+    border: 1px solid white !important; /* Changed from rgba to solid white */
+}
+
+.mobile-menu-btn:focus {
+    outline: none; /* Remove default focus outline */
+}
+
+
         .article-container {
             max-width: 800px;
             margin: 0 auto;
@@ -185,7 +195,7 @@
     left: 0;
     width: 0;
     height: 2px;
-    background: #00ff9d;
+    background: white;
     transition: width 0.3s ease;
 }
 
@@ -219,13 +229,13 @@
     right: -5px;
     bottom: -5px;
     border-radius: 8px;
-    border: 1px solid #00ff9d;
+    border: 1px solid white;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
 
 .mobile-menu-btn:hover {
-    border-color: #00ff9d;
+    border-color: white;
     box-shadow: 0 0 15px rgba(0, 255, 157, 0.3);
 }
 
@@ -259,7 +269,7 @@
 
 .menu-x-line {
     position: absolute;
-    background: #00ff9d;
+    background: white;
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -279,7 +289,7 @@
 
 .mobile-menu-btn.active {
     background: rgba(0, 0, 0, 0.5);
-    border-color: #00ff9d;
+    border-color: white;
     box-shadow: 0 0 25px rgba(0, 255, 157, 0.4);
 }
 
@@ -310,7 +320,7 @@
         align-items: flex-start;
         padding: 6rem 2rem;
         transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-        border-left: 1px solid #00ff9d;
+        border-left: 1px solid white;
         box-shadow: -10px 0 30px rgba(0, 0, 0, 0.5);
         z-index: 998;
     }
