--- a/ai-global-stability.html
+++ b/ai-global-stability.html
@@ -238,7 +238,7 @@
 
 .mobile-menu-btn:hover {
     border-color: white;
-    box-shadow: 0 0 15px rgba(0, 255, 157, 0.3);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
 }
 
 .mobile-menu-btn:hover::before {
@@ -255,7 +255,7 @@
     background: linear-gradient(
         to bottom,
         transparent 50%,
-        rgba(0, 255, 157, 0.1) 50%,
+        rgba(255, 255, 255, 0.1) 50%,
         transparent 51%
     );
     animation: scan 2s linear infinite;
@@ -292,7 +292,7 @@
 .mobile-menu-btn.active {
     background: rgba(0, 0, 0, 0.5);
     border-color: white;
-    box-shadow: 0 0 25px rgba(0, 255, 157, 0.4);
+    box-shadow: 0 0 25px rgba(255, 255, 255, 0.4);
 }
 
 .mobile-menu-btn.active .menu-x-line:nth-child(1) {
@@ -394,7 +394,7 @@
         }
 
         .social-links a:hover {
-            color: #00ff9d;
+            color: grey;
         }
 
         .section {
