--- a/ai-human-consciousness.html
+++ b/ai-human-consciousness.html
@@ -237,7 +237,7 @@
 
 .mobile-menu-btn:hover {
     border-color: white;
-    box-shadow: 0 0 15px rgba(0, 255, 157, 0.3);
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
 }
 
 .mobile-menu-btn:hover::before {
@@ -291,7 +291,7 @@
 .mobile-menu-btn.active {
     background: rgba(0, 0, 0, 0.5);
     border-color: white;
-    box-shadow: 0 0 25px rgba(0, 255, 157, 0.4);
+    box-shadow: 0 0 25px rgba(255, 255, 255, 0.4);
 }
 
 .mobile-menu-btn.active .menu-x-line:nth-child(1) {
@@ -392,7 +392,7 @@
         }
 
         .social-links a:hover {
-            color: #00ff9d;
+            color: grey;
         }
 
         
