--- a/journal.html
+++ b/journal.html
@@ -1294,7 +1294,7 @@ const newStyles = `
                 <a href="algorithmic-apartheid.html" class="card">
                     <img src="images/Cracked_Ceramic_Cup-removebg-preview.png" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Fracture 0001: Ghosts of the Nakba - How Modern Apartheid Is Coded into Palestine’s Living Ruins</h3>
+                        <h3>Ghosts of the Nakba - How Modern Apartheid Is Coded into Palestine’s Living Ruins</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1523,7 +1523,7 @@ const newStyles = `
                 <a href="princy_nuclear_goddess.html" class="card">
                     <img src="images/princy_yellow_nowBLACK.jfif" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Transmission 0005: Princy Mthombeni - The Architect of Atomic Sovereignty</h3>
+                        <h3>Princy Mthombeni - The Architect of Atomic Sovereignty</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1536,7 +1536,7 @@ const newStyles = `
                 <a href="code-and-canvas-faisa.html" class="card">
                     <img src="images/powerpuff_kickBW.jpg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Transmission 0004: Drifting Between Code and Canvas with Faisa</h3>
+                        <h3>Drifting Between Code and Canvas with Faisa</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1549,7 +1549,7 @@ const newStyles = `
                 <a href="arianne-dirtbag666.html" class="card">
                     <img src="images/aribook.jpg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Transmission 0003: Arianne — Stitching the Silence Between</h3>
+                        <h3>Arianne — Stitching the Silence Between</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1562,7 +1562,7 @@ const newStyles = `
                 <a href="batsheva-dueck.html" class="card">
                     <img src="images/bat_shoeBW.jpg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Transmission 0002: Embracing Your Misfit with Batsheva Dueck</h3>
+                        <h3>Embracing Your Misfit with Batsheva Dueck</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1575,7 +1575,7 @@ const newStyles = `
                 <a href="worldwideboyz.html" class="card">
                     <img src="images/WWBz.jpg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Transmission 0001: Inside the Mind of @cosmicweb_is_mine</h3>
+                        <h3>Inside the Mind of @cosmicweb_is_mine</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1589,7 +1589,7 @@ const newStyles = `
                 <a href="a-nuclear-future.html" class="card">
                     <img src="images/r2handRORG.jpg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Archive Fragment 0005: URANIUM_ACCESS = TRUE</h3>
+                        <h3>URANIUM_ACCESS = TRUE</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1602,7 +1602,7 @@ const newStyles = `
                 <a href="classified-manifesto.html" class="card">
                     <img src="images/Future _Transmission_.png" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Archive Fragment 0004: A Manifesto for the Ungovernable</h3>
+                        <h3>A Manifesto for the Ungovernable</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1615,7 +1615,7 @@ const newStyles = `
                 <a href="pirate-radio.html" class="card">
                     <img src="images/Post-Production Studio Monochrome Photograph.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Archive Fragment 0003: The Luminous Underground of Pirate Radio</h3>
+                        <h3>The Luminous Underground of Pirate Radio</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1628,7 +1628,7 @@ const newStyles = `
                 <a href="xenogothic.html" class="card">
                     <img src="images/Pirate Cyborg Figure.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Archive Fragment 0002: Xenogothic — The Philosophy of the Lost Future</h3>
+                        <h3>Xenogothic — The Philosophy of the Lost Future</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1641,7 +1641,7 @@ const newStyles = `
                 <a href="Drifting-as-Rebellion.html" class="card">
                     <img src="images/Man Walking in Shadows.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Archive Fragment 0001: The Situationist Dérive — Drifting as Rebellion (1956)</h3>
+                        <h3>The Situationist Dérive — Drifting as Rebellion (1956)</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
