--- a/journal.html
+++ b/journal.html
@@ -1287,7 +1287,7 @@ const newStyles = `
 
     <!-- Unified Journal Section -->
     <section class="section">
-        <h1 class="journal-heading">FOR THOSE WHO MOVE BETWEEN WORLDS</h1>
+        <h1 class="journal-heading"></h1>
         <div class="container">
             <div class="grid grid-3">
                 <!-- Faultlines Articles -->
