--- a/journal.html
+++ b/journal.html
@@ -1274,7 +1274,7 @@ const newStyles = `
 
     
         
-         <section class="hero" id="home">
+      <!--   <section class="hero" id="home">
     <div class="hero-blur"></div>
     <div class="hero-content">
         <h1 style="color: white; text-transform: uppercase; margin-bottom: 2rem;">
@@ -1282,7 +1282,7 @@ const newStyles = `
         </h1>
         <img src="images/energy_grid-removebg-preview.png" alt="Abstract reality infrastructure visualization" class="hero-image">
     </div>
-</section> 
+</section> -->
 
 
     <!-- Unified Journal Section -->
