--- a/index.html
+++ b/index.html
@@ -3607,7 +3607,7 @@ a.faisaweb-card {
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">Siphosenkosi
+                <img src="images/VR_LOGO_1-removebg-preview.png" alt="Logo">siphosenkosi
                
             </a>
             <button class="mobile-menu-btn">
