--- a/algorithmic-apartheid.html
+++ b/algorithmic-apartheid.html
@@ -546,7 +546,7 @@ blockquote {
         hr {
             border: 0;
             height: 1px;
-            background: #00ff9d
+            background: white;
             margin: 2.5rem 0;
         }
         .epigraph {
