--- a/Drifting-as-Rebellion.html
+++ b/Drifting-as-Rebellion.html
@@ -197,7 +197,7 @@
     left: 0;
     width: 0;
     height: 2px;
-    background: #00ff9d;
+    background: white;
     transition: width 0.3s ease;
 }
 
