--- a/index.html
+++ b/index.html
@@ -3640,7 +3640,7 @@ a.faisaweb-card {
         
         <div class="hero-content">
             <h1></h1>
-            <p>For outsiders, misfits, and culture hackers. Exploring the systems that shape us, the codes that bind us, and the art that sets us free.</p>
+            <p>Exploring the systems that shape us, the codes that bind us, and the art that sets us free.</p>
         </div>
     </section>
 
