--- a/journal.html
+++ b/journal.html
@@ -504,6 +504,9 @@
 
         .card-content {
             padding: 1.5rem;
+flex: 1;
+    display: flex;
+    flex-direction: column;
         }
 
         /* Sections */
@@ -1078,6 +1081,8 @@ const newStyles = `
     display: flex;
     gap: 1rem;
     line-height: 1.4;
+margin-top: auto;
+    padding-top: 1rem;
 }
 
 .blog-meta span {
@@ -1138,6 +1143,8 @@ const newStyles = `
     position: relative;
     transition: all 0.3s ease;
     box-shadow: 0 0 10px rgba(0, 255, 65, 0.3);
+display: flex;
+    flex-direction: column;
 }
 
 .card:hover {
