--- a/journal.html
+++ b/journal.html
@@ -1301,7 +1301,7 @@ display: flex;
                 <a href="algorithmic-apartheid.html" class="card">
                     <img src="images/Cracked_Ceramic_Cup-removebg-preview.png" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Ghosts of the Nakba - How Modern Apartheid Is Coded into Palestine’s Living Ruins</h3>
+                        <h3>Ghosts of the Nakba</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1354,7 +1354,7 @@ display: flex;
                 <a href="religious-tolerance.html" class="card">
                     <img src="images/Serene Contemplation.jpeg" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Are We All Looking at the Same Truth from Different Angles?</h3>
+                        <h3>Can We Achieve Religious Tolerance?</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1394,7 +1394,7 @@ display: flex;
                 <a href="dissolution-of-self.html" class="card">
                     <img src="images/Dramatic_Woman_Portrait-removebg-preview.png" class="blog-img">
                     <div class="card-content">
-                        <h3>Beyond the Shell Part 1: The Dissolution of Self</h3>
+                        <h3>The Dissolution of Self</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1407,7 +1407,7 @@ display: flex;
                 <a href="ai-human-consciousness.html" class="card">
                     <img src="images/Meditative_Humanoid_Robot-removebg-preview.png" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Beyond the Shell Part 2: The Convergence of AI and Human Consciousness</h3>
+                        <h3>The Convergence of AI and Human Consciousness</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
@@ -1420,7 +1420,7 @@ display: flex;
                 <a href="post-humanity.html" class="card">
                     <img src="images/p3Futuristic_Fashion-removebg-preview.png" alt="Space Exploration" class="blog-img">
                     <div class="card-content">
-                        <h3>Beyond the Shell Part 3: Post-Humanity and the Evolution Beyond Individual Consciousness</h3>
+                        <h3>Post-Humanity and the Evolution Beyond Individual Consciousness</h3>
                         <div class="blog-meta">
                             <span>
                                 <i class="fas fa-calendar-alt"></i>
