--- a/index.html
+++ b/index.html
@@ -126,16 +126,26 @@
         }
 
         /* Mobile Menu */
-        .mobile-menu-toggle {
-            display: none;
-            background: none;
-            border: none;
-            color: var(--gray-light);
-            font-size: 1.5rem;
-            cursor: pointer;
-            z-index: 1001;
-            transition: transform 0.3s ease;
-        }
+     
+.mobile-menu-toggle {
+    display: none;
+    background: none;
+    border: none;
+    color: var(--gray-light);
+    font-size: 1.5rem;
+    cursor: pointer;
+    z-index: 1001;
+    transition: transform 0.3s ease;
+    outline: none !important; /* ← Add this line */
+}
+
+/* to ensure no focus styles appear */
+.mobile-menu-toggle:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+
 
         .mobile-menu-toggle.active {
             transform: rotate(90deg);
