--- a/digital-privacy.html
+++ b/digital-privacy.html
@@ -89,6 +89,13 @@
             font-size: 1.5rem;
             font-weight: 700;
             letter-spacing: -0.5px;
+            text-decoration: none;
+            color: var(--text);
+            transition: color 0.3s;
+        }
+
+        .logo:hover {
+            color: var(--accent);
         }
 
         .nav-links {
@@ -135,6 +142,17 @@
             font-size: 1.5rem;
             cursor: pointer;
             z-index: 1001;
+            outline: none !important;
+            transition: transform 0.3s ease;
+        }
+
+        .mobile-menu-toggle:focus {
+            outline: none !important;
+            box-shadow: none !important;
+        }
+
+        .mobile-menu-toggle.active {
+            transform: rotate(90deg);
         }
 
         /* Article Hero Section */
@@ -384,16 +402,22 @@
         .social-links a {
             color: var(--gray-light);
             text-decoration: none;
-            font-size: 1rem;
-            font-weight: 500;
-            padding: 0.8rem 1.5rem;
+            font-size: 1.5rem;
+            padding: 0.8rem;
             border: 1px solid var(--gray);
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             transition: all 0.3s;
         }
 
         .social-links a:hover {
             border-color: var(--accent);
             color: var(--accent);
+            transform: translateY(-5px);
         }
 
         /* Reading Progress Bar */
@@ -556,18 +580,12 @@
             .featured-image {
                 max-height: 400px;
             }
-        }
-
-        @media (max-width: 768px) {
-            nav {
-                padding: 1.5rem 2rem;
-            }
 
             .nav-links {
                 position: fixed;
                 top: 0;
                 right: -100%;
-                width: 70%;
+                width: 100%; /* Changed from 70% to 100% */
                 height: 100vh;
                 background: var(--bg);
                 flex-direction: column;
@@ -576,7 +594,7 @@
                 gap: 2rem;
                 transition: right 0.3s ease;
                 z-index: 1000;
-                box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
+                /* Removed box-shadow entirely */
             }
 
             .nav-links.active {
@@ -590,6 +608,21 @@
 
             .mobile-menu-toggle {
                 display: block;
+            }
+        }
+
+        /* Landscape orientation support */
+        @media (max-height: 600px) and (orientation: landscape) {
+            .nav-links {
+                padding-top: 80px;
+                justify-content: flex-start;
+                overflow-y: auto;
+            }
+        }
+
+        @media (max-width: 768px) {
+            nav {
+                padding: 1.5rem 2rem;
             }
 
             .article-hero {
@@ -672,7 +705,7 @@
     <div class="reading-progress"></div>
 
     <nav>
-        <div class="logo">Siphosenkosi Mlotshwa</div>
+        <a href="index.html" class="logo">Siphosenkosi Mlotshwa</a>
         <button class="mobile-menu-toggle" id="mobileMenuToggle">
             <i class="fas fa-bars"></i>
         </button>
@@ -868,11 +901,16 @@
     </article>
 
     <footer>
-        <p>© 2025 Siphosenkosi Mlotshwa. All rights reserved.</p>
         <div class="social-links">
-            <a href="https://instagram.com/1heavy0">Instagram</a>
-            <a href="https://www.linkedin.com/in/siphosenkosi-mlotshwa/">LinkedIn</a>
-            <a href="mailto:siphosenkosi.m@yahoo.com">Email</a>
+            <a href="https://instagram.com/1heavy0" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/siphosenkosi-mlotshwa/" aria-label="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="mailto:siphosenkosi.m@yahoo.com" aria-label="Email">
+                <i class="far fa-envelope"></i>
+            </a>
         </div>
     </footer>
 
@@ -883,6 +921,7 @@
 
         mobileMenuToggle.addEventListener('click', () => {
             navLinks.classList.toggle('active');
+            mobileMenuToggle.classList.toggle('active'); // Added for button animation
             // Toggle between hamburger and close icon
             const icon = mobileMenuToggle.querySelector('i');
             if (navLinks.classList.contains('active')) {
@@ -898,6 +937,7 @@
         document.querySelectorAll('.nav-links a').forEach(link => {
             link.addEventListener('click', () => {
                 navLinks.classList.remove('active');
+                mobileMenuToggle.classList.remove('active'); // Added for button animation
                 const icon = mobileMenuToggle.querySelector('i');
                 icon.classList.remove('fa-times');
                 icon.classList.add('fa-bars');
