--- a/contact.html
+++ b/contact.html
@@ -398,6 +398,7 @@
         </button>
         <div class="nav-links" id="navLinks">
             <a href="index.html">Home</a>
+           <a href="blog.html">Digital Living</a> 
             <a href="work.html">Simulations</a>
             <a href="journal.html">Codex</a>
             <a href="contact.html">Contact</a>
