--- a/contact.html
+++ b/contact.html
@@ -407,8 +407,8 @@
 
     <main class="contact-container">
         <div class="contact-header">
-            <h1>Get in Touch</h1>
-            <p>Open to collaborations, projects, and conversations about technology, design, and consciousness.</p>
+            <h1></h1>
+            <p>Open to collaborations, projects, and conversations.</p>
         </div>
 
         <div class="contact-form-container">
